--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -1,3 +1,7 @@
+$fa-font-path: '~font-awesome/fonts' !default;
+//$bootstrap-sass-asset-helper: true !default;
+//$icon-font-path: '/packs/fonts/';
+
 $font-family-sans-serif: 'PT Sans', sans-serif;
 $font-family-serif: 'Lato', serif;
 
