--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -32,7 +32,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           .b-sign-in
             .b-sign-in-buttons
               = link_to user_facebook_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-fb' do
-                = image_tag asset_pack_path 'login-fb.svg'
+                = image_tag asset_pack_path 'packs/img/login-fb.svg'
               = link_to user_vkontakte_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-vk' do
                 i.fa.fa-vk.fa-fw
                 span VKONTAKTE
@@ -105,5 +105,5 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           = link_to 'https://www.facebook.com/MissTurizm.ru/',
                   class: 'b-sign-in-button b-sign-in-button-fb social-group-btn',
                   target: '_blank' do
-            = image_tag asset_pack_path 'login-fb.svg'
+            = image_tag asset_pack_path 'packs/img/login-fb.svg'
         br
