--- a/app/views/header/_navigation.html.slim
+++ b/app/views/header/_navigation.html.slim
@@ -4,7 +4,7 @@ nav.navbar.navbar-inverse
     .navbar-header
       button.navbar-toggle[type="button" data-toggle="collapse" data-target=".navbar-collapse"]
         span.sr-only Toggle navigation
-        =image_tag asset_pack_path 'burger.svg'
+        =image_tag asset_pack_path 'packs/img/burger.svg'
       = link_to root_path, class: 'navbar-brand' do
         = render 'shared/logo'
     .collapse.navbar-collapse
