--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="container-footer">
 
       <div class="footer-logo">
-        <%= image_tag(asset_pack_path('logo-2018.png'), class: 'logo') %>
+        <%= image_tag(asset_pack_path('packs/img/logo-2018.png'), class: 'logo') %>
       </div>
 
       <div>
@@ -27,7 +27,7 @@
               Мы в социальных сетях
             </div>
             <a class="footer-contacts-link" href="https://www.facebook.com/MissTurizm.ru/" target="_blank">
-              <%= image_tag(asset_pack_path('icon-bf@2x.png'), size: "40x40") %>
+              <%= image_tag(asset_pack_path('packs/img/icon-bf@2x.png'), size: "40x40") %>
             </a>
           </div>
 
