--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,6 @@
   <%= yield :og %>
   <%== csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-  <%== stylesheet_link_tag 'application' %>
-  <%#== stylesheet_pack_tag 'app-styles' %>
-  <%== javascript_include_tag 'application' %>
-  <%== javascript_pack_tag 'application' %>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({
@@ -56,6 +52,11 @@
 <% cache do %>
   <%= render partial: 'layouts/footer', cached: true %>
 <% end %>
+
+<%== stylesheet_link_tag 'application' %>
+<%== stylesheet_pack_tag 'app-styles' %>
+<%== javascript_include_tag 'application' %>
+<%== javascript_pack_tag 'application' %>
 
 <!— Global Site Tag (gtag.js) - Google Analytics —>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39953962-1"></script>
