--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -10,7 +10,7 @@ h1.home-title#about
 
 .row
   .col-md-6
-    =image_tag asset_pack_path 'girls-3.jpg'
+    =image_tag asset_pack_path 'packs/img/girls-3.jpg'
   .col-md-6
     .text-2
       p Тебе больше 18, ты работаешь в турбизнесе и готова украсить собой мир? Тебя ждёт зажигательный всероссийский конкурс «Мисс Туризм»!
@@ -25,6 +25,6 @@ h1.home-title#about
 
 .row
   .col-md-6
-    = image_tag asset_pack_path 'hotel-01-copy.jpg'
+    = image_tag asset_pack_path 'packs/img/hotel-01-copy.jpg'
   .col-md-6
     .text-4 Состязание финалисток пройдет с 17 по 21 октября в шикарном отеле Aldemar Knossos Royal 5* в Греции на острове Крит.
