--- a/app/views/shared/_logo.slim
+++ b/app/views/shared/_logo.slim
@@ -1,1 +1,1 @@
-= image_tag(asset_pack_path('logo-2018.png'), class: 'logo')
+= image_tag(asset_pack_path('packs/img/logo-2018.png'), class: 'logo')
