--- a/app/views/shared/_meta_og.erb
+++ b/app/views/shared/_meta_og.erb
@@ -3,5 +3,5 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="<%= title.present? ? title : meta_title %>" />
   <meta property="og:description" content="<%= desc.present? ? desc : meta_desc %>" />
-  <meta property="og:image" content="<%= photo.present? ? request.base_url + "#{photo}" : request.base_url + asset_pack_path('share.png') %>" />
+  <meta property="og:image" content="<%= photo.present? ? request.base_url + "#{photo}" : request.base_url + asset_pack_path('packs/img/share.png') %>" />
 <%- end %>
