--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -9,14 +9,14 @@
         href="http://www.travelstartups.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('travel-startups.svg'), size: "308x35", alt: "Travel Startups - сообщество тревел предпринимателей") %>
+        <%= image_tag(asset_pack_path('packs/img/travel-startups.svg'), size: "308x35", alt: "Travel Startups - сообщество тревел предпринимателей") %>
       </a>
       <a
         class="partners-link"
         href="http://www.onlinetours.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('logo-onlinetours@2x.png'), size: "272x48", alt: "Onlinetours") %>
+        <%= image_tag(asset_pack_path('packs/img/logo-onlinetours@2x.png'), size: "272x48", alt: "Onlinetours") %>
       </a>
     </div>
   </div>
@@ -31,14 +31,14 @@
         href="https://www.tourdom.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('tez.png'), size: "250x73", alt: "Турдом") %>
+        <%= image_tag(asset_pack_path('packs/img/tez.png'), size: "250x73", alt: "Турдом") %>
       </a>
       <a
         class="partners-link"
         href="https://www.tourdom.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('logo-tourdom@2x.png'), size: "244x31", alt: "Турдом") %>
+        <%= image_tag(asset_pack_path('packs/img/logo-tourdom@2x.png'), size: "244x31", alt: "Турдом") %>
       </a>
       <!--
       <a
@@ -46,14 +46,14 @@
         href="https://www.bgoperator.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('BGlogos.svg'), size: "280x52", alt: "https://www.bgoperator.ru/") %>
+        <%= image_tag(asset_pack_path('packs/img/BGlogos.svg'), size: "280x52", alt: "https://www.bgoperator.ru/") %>
       </a>
       <a
         class="partners-link"
         href="http://kilitglobal.com/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('kilit-global.svg'), size: "230x53", alt: "http://kilitglobal.com/") %>
+        <%= image_tag(asset_pack_path('packs/img/kilit-global.svg'), size: "230x53", alt: "http://kilitglobal.com/") %>
       </a>
       -->
     </div>
@@ -70,14 +70,14 @@
         href="http://www.trn-news.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('logo-trn.svg'), size: "134x63", alt: "Travel Russian News") %>
+        <%= image_tag(asset_pack_path('packs/img/logo-trn.svg'), size: "134x63", alt: "Travel Russian News") %>
       </a>
       <a
         class="partners-link"
         href="https://sletat.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('logo-sletat.svg'), size: "205x63", alt: "Sletat.ru") %>
+        <%= image_tag(asset_pack_path('packs/img/logo-sletat.svg'), size: "205x63", alt: "Sletat.ru") %>
       </a>
     </div>
   </div>
@@ -93,7 +93,7 @@
         href="http://missvolga.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('volga-models-copy.png'), size: "219x91", alt: "http://missvolga.ru/") %>
+        <%= image_tag(asset_pack_path('packs/img/volga-models-copy.png'), size: "219x91", alt: "http://missvolga.ru/") %>
       </a>
       <!--
       <a
@@ -101,14 +101,14 @@
         href="http://iway.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('iway-logo.svg'), size: "110x48", alt: "iway") %>
+        <%= image_tag(asset_pack_path('packs/img/iway-logo.svg'), size: "110x48", alt: "iway") %>
       </a>
       <a
         class="partners-link"
         href="https://bronevik.com/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('bronevik@2x.png'), size: "138x49", alt: "bronevik") %>
+        <%= image_tag(asset_pack_path('packs/img/bronevik@2x.png'), size: "138x49", alt: "bronevik") %>
       </a>
       -->
     </div>
@@ -119,14 +119,14 @@
         href="https://dashkov5.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('logo_presswall_itog.svg'), size: "280x140", alt: "ambotis") %>
+        <%= image_tag(asset_pack_path('packs/img/logo_presswall_itog.svg'), size: "280x140", alt: "ambotis") %>
       </a>
       <a
         class="partners-link"
         href="http://ukab.ru/"
         target="_blank"
       >
-        <%= image_tag(asset_pack_path('logo-bayborodin-co@2x.png'), size: "270x65", alt: "ukab.ru") %>
+        <%= image_tag(asset_pack_path('packs/img/logo-bayborodin-co@2x.png'), size: "270x65", alt: "ukab.ru") %>
       </a>
     </div>
     -->
