--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,7 +86,7 @@
                               class:  'vote-btn',
                               remote: true do %>
                     Проголосовать за участницу
-                    <%= image_tag asset_pack_path 'icon-like-red.svg' %>
+                    <%= image_tag asset_pack_path 'packs/img/icon-like-red.svg' %>
                   <% end %>
                 </div>
               <% else %>
@@ -104,7 +104,7 @@
               <div class="vote-btn-container text-center">
                 <a href="#" class="vote-btn" data-toggle="modal" data-target="#myModal">
                   Проголосовать за участницу
-                  <%= image_tag asset_pack_path 'icon-like-red.svg' %>
+                  <%= image_tag asset_pack_path 'packs/img/icon-like-red.svg' %>
                 </a>
               </div>
             <% end %>
