--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -1,7 +1,8 @@
+@import "~bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
 @import "vars";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "fonts";
-//@import "~bootstrap-sass/assets/stylesheets/bootstrap";
-//@import "font-awesome";
+@import "~font-awesome/scss/font-awesome";
 @import "logo";
 @import "header";
 @import "profile";
@@ -50,6 +51,7 @@ body {
 .content-container {
 	margin-bottom: 30px;
 	padding-bottom: 40px;
+	padding-top: 10px;
 	background-color: #fff;
 }
 
