--- a/app/views/shared/_gen_partner.slim
+++ b/app/views/shared/_gen_partner.slim
@@ -3,21 +3,21 @@ section.gen-partner
 
   .gen-partner-row
     .gen-partner-logo-wrapper.gen-partner-logo-wrapper-1
-      = image_tag(asset_pack_path('kr-01@2x.jpg'), height: '142', width: '200', class: 'gen-partner-logo')
+      = image_tag(asset_pack_path('packs/img/kr-01@2x.jpg'), height: '142', width: '200', class: 'gen-partner-logo')
     .gen-partner-media-wrapper
       .gen-partner-media-gallery.owl-carousel.gen-partner-media-gallery-owl
         .gen-partner-media-item
-          = image_tag(asset_pack_path('gen-partner-2.jpg'), class: 'gen-partner-media-img')
+          = image_tag(asset_pack_path('packs/img/gen-partner/gen-partner-2.jpg'), class: 'gen-partner-media-img')
         .gen-partner-media-item
-          = image_tag(asset_pack_path('gen-partner-4.jpg'), class: 'gen-partner-media-img')
+          = image_tag(asset_pack_path('packs/img/gen-partner/gen-partner-4.jpg'), class: 'gen-partner-media-img')
         .gen-partner-media-item
-          = image_tag(asset_pack_path('gen-partner-7.jpg'), class: 'gen-partner-media-img')
+          = image_tag(asset_pack_path('packs/img/gen-partner/gen-partner-7.jpg'), class: 'gen-partner-media-img')
         .gen-partner-media-item
-          = image_tag(asset_pack_path('gen-partner-8.jpg'), class: 'gen-partner-media-img')
+          = image_tag(asset_pack_path('packs/img/gen-partner/gen-partner-8.jpg'), class: 'gen-partner-media-img')
         .gen-partner-media-item
-          = image_tag(asset_pack_path('gen-partner-9.jpg'), class: 'gen-partner-media-img')
+          = image_tag(asset_pack_path('packs/img/gen-partner/gen-partner-9.jpg'), class: 'gen-partner-media-img')
         .gen-partner-media-item
-          = image_tag(asset_pack_path('gen-partner-10.jpg'), class: 'gen-partner-media-img')
+          = image_tag(asset_pack_path('packs/img/gen-partner/gen-partner-10.jpg'), class: 'gen-partner-media-img')
 
   .gen-partner-row
     .gen-partner-media-wrapper.gen-partner-media-wrapper-left
@@ -25,4 +25,4 @@ section.gen-partner
         .gen-partner-media-item-video
           iframe src="https://www.youtube.com/embed/BUZDChUZHdU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""
     .gen-partner-logo-wrapper.gen-partner-logo-wrapper-2
-      = image_tag(asset_pack_path('30-years-aldemar-resorts-2017-final@2x.jpg'), height: '134', width: '250', class: 'gen-partner-logo')
+      = image_tag(asset_pack_path('packs/img/30-years-aldemar-resorts-2017-final@2x.jpg'), height: '134', width: '250', class: 'gen-partner-logo')
