--- a/app/views/shared/_jury.html.erb
+++ b/app/views/shared/_jury.html.erb
@@ -7,7 +7,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-4.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/jury-4.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Татьяна Дмитрова
@@ -21,7 +21,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('ilin.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/ilin.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Владимир Ильин
@@ -35,7 +35,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('chehova.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/chehova.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Анфи́са Че́хова
@@ -49,7 +49,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('сharitidis.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/сharitidis.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Димитрис Харитидис
@@ -63,7 +63,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('veber.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/veber.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Наталья Вебер
@@ -77,7 +77,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('angelopoulos.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/angelopoulos.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Александрос Ангелопулос
@@ -92,7 +92,7 @@
     <!--
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-1.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/jury-1.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Дерья Биллюр
@@ -107,7 +107,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-2.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/jury-2.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Мерт Эсмен
@@ -123,7 +123,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-3.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/jury-3.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Рашад Мамедов
@@ -140,7 +140,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-5.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/jury-5.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Сергей Агафонов
@@ -157,7 +157,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('danilovich.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/danilovich.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Евгений Данилович
@@ -171,7 +171,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('mihriban.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/mihriban.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Михрибан Илмаз
@@ -187,7 +187,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('spilman.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/spilman.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Вадим Шпильман
@@ -201,7 +201,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('pustov.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/pustov.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Леонид Пустов
@@ -215,7 +215,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('pobedkin.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/pobedkin.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Константин Победкин
@@ -229,7 +229,7 @@
 
     <div class="jury-item">
       <div class="jury-item-photo">
-        <%= image_tag(asset_pack_path('jury-10.jpg'), size: "180x180") %>
+        <%= image_tag(asset_pack_path('packs/img/jury-10.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
         Анна Багдасарян
