--- a/app/views/shared/_jury.html.erb
+++ b/app/views/shared/_jury.html.erb
@@ -80,7 +80,7 @@
         <%= image_tag(asset_pack_path('packs/img/sem.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
-        Анаа Семенович
+        Анна Семенович
       </div>
       <div class="jury-item-info">
         Фигуристка, актриса, телеведущая
