--- a/app/javascript/packs/_counters.scss
+++ b/app/javascript/packs/_counters.scss
@@ -1,8 +1,16 @@
 .counters-wrapper {
 	position: relative;
 	z-index: 5;
+	height: 148px;
 	margin-top: -148px;
 	padding: 0;
+
+	@media (max-width: 768px) {
+		height: auto;
+		margin: 0;
+		padding: 20px 0 60px;
+		background-color: #fff;
+	}
 }
 
 .counters-container {
@@ -13,12 +21,28 @@
 	@media (max-width: 1200px) {
 		justify-content: center;
 	}
+
+	@media (max-width: 768px) {
+		flex-direction: column;
+		align-items: center;
+	}
 }
 
 .counter {
 	width: 300px;
 	margin: 20px 0 0;
 	white-space: nowrap;
+	@media (max-width: 960px) {
+		width: 420px;
+		&:nth-child(1),
+		&:nth-child(3) {
+			width: 150px;
+		}
+	}
+	@media (max-width: 768px) {
+		margin-top: 32px;
+		width: 280px;
+	}
 }
 
 .counter-item {
@@ -31,10 +55,13 @@
 	letter-spacing: normal;
 	text-align: center;
 	color: #a69e7b;
+
+	@media (max-width: 960px) {
+		font-size: 52px;
+	}
 }
 
 .counter-label {
-	width: 300px;
 	font-family: Lato;
 	font-size: 18px;
 	font-weight: 300;
@@ -45,4 +72,8 @@
 	text-align: center;
 	color: #000000;
 	text-transform: uppercase;
+
+	@media (max-width: 480px) {
+		font-size: 16px;
+	}
 }
