--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -18,6 +18,7 @@
 @import "owl";
 @import 'lightgallery/lightgallery/dist/css/lightgallery';
 @import 'lightgallery/lightgallery/dist/css/lg-transitions';
+@import 'users_grid';
 
 .alert {
 	margin: 15px 0;
