--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -48,7 +48,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
         h4 Условия участия:
         ul
           li К участию допускаются только сотрудницы туриндустрии
-          li К участия допускаются только девушки старше 18 олет
+          li К участия допускаются только девушки старше 18 лет
           li Для участия необходимо зарегистрироваться через социальные сети
           li Для участия необходимо заполнение всех обязательных полей в анкете и публикация фотографий.
           li Запрещено публиковать фото без белья и купальников.
@@ -66,7 +66,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           li Потенциальным полуфиналисткам будет необходимо еще раз подтвердить свою принадлежность у туриндустрии (визитная карточка или трудовая книжка). Участница будет дисквалифицирована в случае, если не сможет подтвердить свою принадлежность к туризму
 
         h4 Полуфинал:
-        p 19/09 на полуфинале конкурса компетентными членами жюри будут выбраны 10 финалисок, которые отпарятся в Грецию.
+        p 19/09 на полуфинале конкурса компетентными членами жюри будут выбраны 10 финалисок, которые отправятся в Грецию.
 
         h4 Жюри будет оценивать:
         ul
