--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -24,7 +24,7 @@ h1.home-title#about
     .text-3
       |Состязание полуфиналисток пройдет в 19 сентября в Luxury Partisan Village в рамках
       br
-      a href="http://www.itif-forum.ru/" Международного Туристического Инвестиционного Форума ITIF
+      a target="_blank" href="http://www.itif-forum.ru/" Международного Туристического Инвестиционного Форума ITIF
   .col-md-6
     = image_tag(asset_pack_path('packs/img/PartMilitary_01.jpg'), class: 'img-responsive')
 
