--- a/app/views/shared/_gen_partner.slim
+++ b/app/views/shared/_gen_partner.slim
@@ -20,7 +20,7 @@ section.gen-partner
           = image_tag(asset_pack_path('packs/img/gen-partner/gen-partner-10.jpg'), class: 'gen-partner-media-img')
 
   .gen-partner-row
-    .gen-partner-media-wrapper.gen-partner-media-wrapper-left
+    .gen-partner-media-wrapper.gen-partner-media-wrapper-left.gen-partner-media-wrapper-left-2
       .gen-partner-media-gallery
         .gen-partner-media-item-video
           iframe src="https://www.youtube.com/embed/BUZDChUZHdU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""
