--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -1,30 +1,30 @@
 h1.home-title#about
-  .home-title-slogan Конкурс красоты представительниц туриндустрии
+  .home-title-slogan Всероссийский конкурс красоты представительниц туриндустрии
   .home-title-text Мисс Туризм 2018
 
-.row style="margin-bottom: 12px"
-  .col-md-6
-    .home-subtitle О конкурсе
-  .col-md-6
-    .text-1 Твоя красота затмит пейзажи Австралии, Доминиканы и Мальдив? Ты удивительна, как розовое озеро в Сенегале и интересна как фауна Мадагаскара?
 
-.row
+.text-1
+  p Твоя красота затмит пейзажи Доминиканы и Мальдив? Ты удивительна, как розовое озеро Сенегала, и  интересна, как фауна Мадагаскара? Твой ум острее Эвереста, а чувство юмора искромётнее вулкана Этна? Ты работаешь в сфере туризма и старше восемнадцати?
+
+.row.about-row
   .col-md-6
     = image_tag(asset_pack_path('packs/img/girls-3.jpg'), class: 'img-responsive')
   .col-md-6
     .text-2
-      p Тебе больше 18, ты работаешь в турбизнесе и готова украсить собой мир? Тебя ждёт зажигательный всероссийский конкурс «Мисс Туризм»!
-      p Регистрируйся прямо сейчас и собирай как можно больше лайков в интернет-голосовании — используй шанс стать одной из 29 участниц.
-      p Для этого подключи друзей, публикуй вау-новость в своих соцсетях
+      p Конкурс «Мисс Туризм» создан специально для тебя! Регистрируйся прямо сейчас и собирай как можно больше лайков в интернет-голосовании – используй шанс стать одной из 29 участниц. Для этого подключи друзей, публикуй вау-новость в своих соцсетях и скрести пальчики
+      = link_to "Правила участия", '#about', data: {toggle: "modal", target: "#myModal1"}
     - unless user_signed_in?
-      button style="width: 300px" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Участвовать
+      button style="width: 300px" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Зарегистрируйся
 
-.row
+.row.about-row
   .col-md-6
     .text-3
-      |Состязание полуфиналисток пройдет в 19 сентября в Luxury Partisan Village в рамках
-      br
-      a target="_blank" href="http://www.itif-forum.ru/" Международного Туристического Инвестиционного Форума ITIF
+      p
+        |Зажигательный полуфинал случится 19 сентября на Partisan Luxury Party в рамках
+        a target="_blank" href="http://www.itif-forum.ru/" Международного Туристического Инвестиционного Форума ITIF
+        |.
+      p Наряды участниц будут в стиле милитари, а атмосфера вечера взрывной и захватывающей. Члены жюри выберут 10 восхитительных финалисток, оценивая их внешние данные, ум, находчивость и оптимизм.
+      = link_to "Cтать гостем полуфинала", 'http://boyarski.ru/info/galereya/nash_restoran/letnyaya_veranda_i_domiki/', target: "_blank", class: "btn btn-success"
   .col-md-6
     = image_tag(asset_pack_path('packs/img/PartMilitary_01.jpg'), class: 'img-responsive')
 
@@ -32,4 +32,5 @@ h1.home-title#about
   .col-md-6
     = image_tag(asset_pack_path('packs/img/hotel-01-copy.jpg'), class: 'img-responsive')
   .col-md-6
-    .text-4 Состязание финалисток пройдет с 17 по 21 октября в шикарном отеле Aldemar Knossos Royal 5* в Греции на острове Крит.
+    .text-4 Финал конкурса «Мисс Туризм» пройдёт во второй половине октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5*, построенном в стиле Кносского дворца. Какие испытания ждут финалисток? Пока все детали – под завесой тайны ;-)
+    / .text-4 Финал конкурса «Мисс Туризм» пройдёт с 17 по 21 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5*, построенном в стиле Кносского дворца. Какие испытания ждут финалисток? Пока все детали – под завесой тайны ;-)
