--- a/app/views/shared/_jury.html.erb
+++ b/app/views/shared/_jury.html.erb
@@ -1,6 +1,6 @@
 <div id="jury" class="jury">
   <div class="home-subtitle jury-list-title">
-    Жюри конкурса
+    Жюри
   </div>
 
   <div class="jury-list">
