--- a/app/views/shared/_steps.html
+++ b/app/views/shared/_steps.html
@@ -61,7 +61,7 @@
         Финал конкурса
       </div>
       <div class="step-date">
-        17-21 октября
+        вторая половина октября
       </div>
     </div>
 
