--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -15,7 +15,11 @@ header {
 		background-image: url('img/hero-masked@2x-480-768.jpg');
 		background-size: cover;
 	}
+	@media (max-width: 640px) {
+		height: 500px;
+	}
 	@media (max-width: 480px) {
+		height: 450px;
 		background-position: -10px top;
 	}
 }
@@ -95,7 +99,7 @@ header {
 	position: relative;
 	z-index: 3;
 	width: 320px;
-	margin: 140px 0 0 0;
+	margin: 60px 0 0 0;
 
 	@media (max-width: 768px) {
 		width: 300px;
@@ -112,14 +116,14 @@ header {
 
 .header-title {
 	margin: 0 0 32px;
-	font-family: Lato;
+	font-family: 'Lato', serif;
 	font-size: 32px;
-	font-weight: bold;
 	font-style: normal;
 	font-stretch: normal;
-	line-height: 1.17;
+	line-height: 1.4;
 	letter-spacing: normal;
 	color: #ffffff;
+	font-weight: 600;
 
 	@media (max-width: 768px) {
 		color: #000000;
