--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -142,9 +142,11 @@
 }
 
 .home-title-slogan {
+	font-family: 'Lato';
 	font-size: 32px;
 	text-align: center;
 	color: #000000;
+	font-weight: 300;
 
 	@media (max-width: 768px) {
 		font-size: 24px;
@@ -168,34 +170,45 @@
 	color: #000000;
 	font-family: 'Lato';
 }
-.home-subtitle-margin{
+
+.home-subtitle-margin {
+	margin-bottom: 32px;
+}
+
+.about-row {
 	margin-bottom: 32px;
 }
 
 .text-1 {
-	font-family: 'Lato';
-	font-size: 28px;
-	font-weight: 300;
-	line-height: 1.21;
-	color: #000000;
-}
-.text-2{
-	padding-top: 70px;
 	margin-bottom: 50px;
-}
-.text-3 {
-	padding-top: 70px;
+	text-align: center;
 	font-family: 'Lato';
-	font-size: 26px;
+	font-size: 28px;
 	font-weight: 300;
 	line-height: 1.21;
 	color: #000000;
-	text-align: center;
 }
-.text-4{
-	padding: 125px 0 0;
+
+.text-2 {
+	padding-top: 30px;
+	margin-bottom: 32px;
+	font-size: 18px;
+}
+
+.text-3 {
+	padding-top: 30px;
 	font-family: 'Lato';
-	font-size: 28px;
+	font-size: 18px;
+	//font-weight: 300;
+	//line-height: 1.21;
+	//color: #000000;
+	text-align: right;
+}
+
+.text-4 {
+	padding: 60px 0 0;
+	font-family: 'Lato';
+	font-size: 24px;
 	font-weight: 300;
 	line-height: 1.21;
 	color: #000000;
