--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -16,7 +16,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
             = link_to "Моя анкета", user_path(current_user), class: 'btn btn-primary', style: "margin: 0 16px 0 0"
             = link_to 'Выход', destroy_user_session_path, :method => 'delete', class: 'btn btn-default'
         - else
-          h1.header-title Конкурс красоты Мисс Туризм!
+          h1.header-title Всероссийский конкурс красоты Мисс Туризм!
           button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Участвовать
 
 
@@ -68,15 +68,15 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
         h4 Полуфинал:
         p 19/09 на полуфинале конкурса компетентными членами жюри будут выбраны 10 финалисок, которые отправятся в Грецию.
 
-        h4 Жюри будет оценивать:
-        ul
+        / h4 Жюри будет оценивать:
+        / ul
           li Внешние данные
           li Находчивость
           li Чувство юмора
           li Ум
 
         h4 Финал:
-        p 17/10-21/10 в Греции по мнению компетентного жюри будет выбрана Мисс Туризм 2018, первая Вице-Мисс 2018 и вторая Вице-Мисс 2018
+        p вторая половина октября в Греции по мнению компетентного жюри будет выбрана Мисс Туризм 2018, первая Вице-Мисс 2018 и вторая Вице-Мисс 2018
 
         h4 Жюри будет оценивать
         ul
