--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -19,6 +19,7 @@
 @import 'lightgallery/lightgallery/dist/css/lightgallery';
 @import 'lightgallery/lightgallery/dist/css/lg-transitions';
 @import 'users_grid';
+@import 'about';
 
 .alert {
 	margin: 15px 0;
