--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -133,7 +133,7 @@
 }
 
 .home-title {
-	margin: 60px 0 100px;
+	margin: 64px 0;
 	text-align: center;
 
 	@media (max-width: 768px) {
@@ -146,10 +146,11 @@
 	font-size: 32px;
 	text-align: center;
 	color: #000000;
-	font-weight: 300;
+	font-weight: 800;
+	line-height: 1.6;
 
 	@media (max-width: 768px) {
-		font-size: 24px;
+		font-size: 28px;
 		line-height: 32px;
 	}
 }
@@ -158,6 +159,7 @@
 	font-family: 'Lato';
 	font-size: 50px;
 	font-weight: 800;
+	line-height: 1.6;
 
 	@media (max-width: 768px) {
 		font-size: 32px;
@@ -169,107 +171,12 @@
 	font-weight: bold;
 	color: #000000;
 	font-family: 'Lato';
-}
 
-.home-subtitle-margin {
-	margin-bottom: 32px;
-}
-
-.about-row {
-	margin-bottom: 32px;
-}
-
-.text-1 {
-	margin-bottom: 50px;
-	text-align: center;
-	font-family: 'Lato';
-	font-size: 28px;
-	font-weight: 300;
-	line-height: 1.21;
-	color: #000000;
-}
-
-.text-2 {
-	padding-top: 30px;
-	margin-bottom: 32px;
-	font-size: 18px;
-}
-
-.text-3 {
-	padding-top: 30px;
-	font-family: 'Lato';
-	font-size: 18px;
-	//font-weight: 300;
-	//line-height: 1.21;
-	//color: #000000;
-	text-align: right;
-}
-
-.text-4 {
-	padding: 60px 0 0;
-	font-family: 'Lato';
-	font-size: 24px;
-	font-weight: 300;
-	line-height: 1.21;
-	color: #000000;
-	text-align: center;
-}
-
-.heroes {
-	margin: 0 0 137px;
-
-	@media (max-width: 1024px) {
-		margin: 0 0 80px;
-	}
-}
-
-.heroes-item {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin: 0 0 55px;
-
-	&:last-child {
-		margin: 0;
-	}
-	@media (max-width: 1024px) {
-		margin: 0 0 32px;
-	}
-	@media (max-width: 420px) {
-		display: block;
-	}
-}
-
-.heroes-item-icon {
-	margin-right: 32px;
-	text-align: center;
-
-	@media (max-width: 420px) {
-		margin: 0 0 16px;
-	}
-}
-
-.heroes-item-text {
-	max-width: 870px;
-	font-size: 18px;
-	text-align: left;
-	color: #000000;
-
-	@media (max-width: 420px) {
+	@media (max-width: 480px) {
 		text-align: center;
 	}
 }
 
-.home-action {
-	margin: 60px 0 150px;
-	text-align: center;
-
-	@media (max-width: 1024px) {
-		margin: 60px 0 80px;
-	}
-	@media (max-width: 400px) {
-		.hide-xs {
-			display: none;
-		}
-	}
+.home-subtitle-margin {
+	margin-bottom: 32px;
 }
