--- a/app/javascript/packs/_gen_partner.scss
+++ b/app/javascript/packs/_gen_partner.scss
@@ -10,7 +10,7 @@
 	margin: 50px 0;
 	padding: 45px 0;
 
-	&:last-child{
+	&:last-child {
 		margin-bottom: 0;
 	}
 
@@ -18,11 +18,20 @@
 		flex-direction: column;
 		align-items: center;
 	}
+
+	@media (max-width: 768px) {
+		margin: 24px 0;
+	}
+	@media (max-width: 480px) {
+		margin: 10px 0;
+	}
 }
-.gen-partner-logo-wrapper{
+
+.gen-partner-logo-wrapper {
 	flex-grow: 200;
 	text-align: center;
 }
+
 .gen-partner-logo-wrapper-1 {
 	margin-right: 30px;
 
@@ -41,7 +50,7 @@
 	}
 }
 
-.gen-partner-media-wrapper-left-2{
+.gen-partner-media-wrapper-left-2 {
 	@media (max-width: 960px) {
 		order: 2;
 	}
@@ -65,6 +74,28 @@
 		width: 510px;
 		background-color: #025171;
 	}
+
+	@media (max-width: 768px) {
+		width: calc(100% - 48px);
+
+		&:before {
+			left: -24px;
+			right: -24px;
+			top: -24px;
+			width: auto;
+		}
+	}
+
+	@media (max-width: 480px) {
+		width: 100%;
+
+		&:before {
+			left: -10px;
+			right: -10px;
+			top: -10px;
+			width: auto;
+		}
+	}
 }
 
 .gen-partner-media-wrapper-left {
@@ -73,6 +104,23 @@
 		left: -45px;
 		top: -45px;
 		bottom: -45px;
+	}
+	@media (max-width: 768px) {
+		&:before {
+			left: -24px;
+			right: -24px;
+			top: -24px;
+			bottom: -24px;
+			width: auto;
+		}
+	}
+	@media (max-width: 768px) {
+		&:before {
+			left: -10px;
+			right: -10px;
+			top: -10px;
+			bottom: -10px;
+		}
 	}
 }
 
@@ -88,9 +136,10 @@
 	height: 480px;
 	text-align: center;
 
-	iframe {
+	@media (max-width: 768px) {
 		width: 100%;
-		height: 100%;
+		height: 0;
+		padding-top: calc(80% - 35px);
 	}
 }
 
@@ -102,12 +151,42 @@
 		height: 360px;
 		vertical-align: top;
 	}
+
+	@media (max-width: 768px) {
+		width: 416px;
+		height: 234px;
+		margin: 0 auto;
+
+		iframe {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	@media (max-width: 480px) {
+		width: 300px;
+		height: 168px;
+		margin: 0 auto;
+
+		iframe {
+			width: 100%;
+			height: 100%;
+		}
+	}
 }
 
 .gen-partner-media-img {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
 	vertical-align: top;
 	display: inline-block !important;
-	width: auto !important;
-	max-width: 640px;
-	max-height: 480px;
+	//width: auto !important;
+	//max-width: 640px;
+	//max-height: 480px;
+
+	//@media (max-width: 768px) {
+	//	max-width: 100%;
+	//}
 }
