--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -171,10 +171,11 @@
 	font-weight: bold;
 	color: #000000;
 	font-family: 'Lato';
+	text-align: center;
 
-	@media (max-width: 480px) {
-		text-align: center;
-	}
+	//@media (max-width: 480px) {
+	//	text-align: center;
+	//}
 }
 
 .home-subtitle-margin {
