вертска блока о конкурсе

--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -68,8 +68,8 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
         h4 Полуфинал:
         p 19/09 на полуфинале конкурса компетентными членами жюри будут выбраны 10 финалисок, которые отправятся в Грецию.
 
-        / h4 Жюри будет оценивать:
-        / ul
+        h4 Жюри будет оценивать:
+        ul
           li Внешние данные
           li Находчивость
           li Чувство юмора
@@ -78,8 +78,8 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
         h4 Финал:
         p вторая половина октября в Греции по мнению компетентного жюри будет выбрана Мисс Туризм 2018, первая Вице-Мисс 2018 и вторая Вице-Мисс 2018
 
-        h4 Жюри будет оценивать
-        ul
+        / h4 Жюри будет оценивать
+        / ul
           li Внешние данные
           li Находчивость
           li Чувство юмора
