--- a/app/views/users/_userinfo.erb
+++ b/app/views/users/_userinfo.erb
@@ -11,7 +11,7 @@
   <div class="profile-social-title">
     Поделитесь с друзьями:
   </div>
-  <div class="ya-share2" data-services="collections,vkontakte,facebook" data-counter=""></div>
+  <div class="ya-share2" data-services="vkontakte,facebook" data-counter=""></div>
 </div>
 
 
