--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -76,7 +76,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           li Ум
 
         h4 Финал:
-        p вторая половина октября в Греции по мнению компетентного жюри будет выбрана Мисс Туризм 2018, первая Вице-Мисс 2018 и вторая Вице-Мисс 2018
+        p Во второй половине октября в Греции по мнению компетентного жюри будет выбрана Мисс Туризм 2018, первая Вице-Мисс 2018 и вторая Вице-Мисс 2018
 
         / h4 Жюри будет оценивать
         / ul
