--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -16,7 +16,7 @@
 
   <div class="partners-block">
     <div class="partners-title">
-      ПРИ ПОДДЕРЖКЕ
+      ОФИЦИАЛЬНЫЙ ТУРОПЕРАТОР КОНКУРСА
     </div>
     <div class="partners-links">
       <a
@@ -26,6 +26,14 @@
       >
         <%= image_tag(asset_pack_path('packs/img/partners/tez2.png'), size: "159x60", alt: "TEZ TOUR") %>
       </a>
+    </div>
+  </div>
+
+  <div class="partners-block">
+    <div class="partners-title">
+      ПРИ ПОДДЕРЖКЕ
+    </div>
+    <div class="partners-links">
       <a
         class="partners-link"
         href="https://www.tourdom.ru/"
