--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -127,6 +127,5 @@
   <%= link_to "Все участницы", votes_path, class: "btn btn-success btn-lg" %>
 </div>
 
-<div>
-  <%= render partial: 'shared/gen_partner', cached: true %>
-</div>
+<%= render partial: 'shared/gen_partner', cached: true %>
+<%= render partial: 'shared/partners', cached: true %>
